# bsma_lora

./: .gitmodules  LICENSE.md  README.md
hardware/pcb_design/: AC_board.PcbDoc  AC_board.PcbDoc.htm  AC_board.PrjPcb  AC_board.PrjPcbStructure  AC_board.SchDoc  AC_board_outjob.OutJob  ANAREN_PD0409J7575S2HF.lia  CONSMA001-SMD-G.lia  Design Rule Check - AC_board.drc  Design Rule Check - AC_board.html  QFN50P300X300X100-17N.lia  VectorModulator.SchDoc  pcbminions.lcs
hardware/pcb_design/Imported ANAREN_PD0409J7575S2HF.lia/: ANAREN_PD0409J7575S2HF.LibPkg  ANAREN_PD0409J7575S2HF.PcbLib
hardware/pcb_design/Imported ANAREN_PD0409J7575S2HF.lia/Project Outputs for ANAREN_PD0409J7575S2HF/: ANAREN_PD0409J7575S2HF.IntLib
hardware/pcb_design/Imported CONSMA001-SMD-G.lia/: CONSMA001-SMD-G.LibPkg  CONSMA001-SMD-G.PcbLib  CONSMA001-SMD-G.SchLib
hardware/pcb_design/Imported QFN50P300X300X100-17N.lia/: QFN50P300X300X100-17N.LibPkg  QFN50P300X300X100-17N.PcbLib
hardware/pcb_design/Project Outputs for AC_board/: AC_board.html  AC_board.xlsx  Design Rule Check - AC_board.drc  Design Rule Check - AC_board.html  Status Report.Txt
hardware/pcb_design/Project Outputs for AC_board/AC_board/: AC_board.DRR  AC_board.EXTREP  AC_board.G1  (+16 more)
hardware/pcb_design/Project Outputs for Free Documents/: Status Report.Txt
hardware/pcb_design/__Previews/: AC_board.SchDocPreview  VectorModulator.SchDocPreview
simulator/: Simulations.m  cal_capacity.m  configurations.m  configurations_vls.mat  decode_with_capture.m  decode_with_capture_bsma.m  decode_without_capture.m  deploy.m  finish_transmission_aloha.m  finish_transmission_csma.m  finish_transmission_full.m  gen_packets.m  generate_configuration_defaults.m  generate_configuration_varying_load.m  getRSS.m  get_gw_nmap.m  get_nmap.m  parseConfigurations.m  plot_energy.m  plot_magic.m  plot_reliability.m  plot_scatter_hexagon.m  plot_scatter_new.m  plots_vary_load.m  print_fig.m  run_simulation_vary_load_scale.m  start_transmission_aloha.m  start_transmission_csma.m  start_transmission_full.m  thru_aloha.m  thru_csma.m  thru_full.m  update_channel_busy.m  update_channel_idle.m  update_channel_state_CSMA.m  update_channel_state_Full.m
simulator/results/2022-9-3-18-23/: all_variables.mat  scatter_plot_100_load_v2.fig  scatter_plot_cells.fig  throughput_with_load.fig
simulator/results/2022-9-3-18-36/: all_variables.mat  scatter_plot_100_load_v2.fig  scatter_plot_cells.fig  throughput_with_load.fig
testbed/devices_stm32/mcci_lmic_txrx_gateway/: mcci_lmic_txrx_gateway.ino
testbed/devices_stm32/mcci_lmic_txrx_node/: mcci_lmic_txrx_node.ino
testbed/devices_stm32/mcci_lmic_txrx_rxgateway/: mcci_lmic_txrx_rxgateway.ino
testbed/gateway_fpga/rfnoc-wcsng_fdr_lp/: CMakeLists.txt  MANIFEST.md  README.md
testbed/gateway_fpga/rfnoc-wcsng_fdr_lp/lib/: CMakeLists.txt  adder_block_ctrl_impl.cpp  adder_impl.cc  adder_impl.h  lorabusytone_block_ctrl_impl.cpp  lorabusytone_impl.cc  lorabusytone_impl.h  lorapackdetect_block_ctrl_impl.cpp  lorapackdetect_impl.cc  lorapackdetect_impl.h  nullx_block_ctrl_impl.cpp  nullx_impl.cc  nullx_impl.h  qa_wcsng_fdr_lp.cc  qa_wcsng_fdr_lp.h  test_wcsng_fdr_lp.cc
(+66 files in other folders)
